# ColdNotch

./: .gitignore  LICENSE  README.md  pyproject.toml
coldnotch/: __init__.py  approval_server.py  approvals.py  audit.py  channels.py  core.py  policy.py  slack.py
docs/: README.md  index.md
examples/: email_agent.py  slack_approval_demo.py
simulator/: __init__.py  __main__.py  agent.py  data_gen.py  runner.py
simulator/scenarios/: benign_apicall.json  benign_docread.json  benign_routine.json  chain_exfil_file.json  chain_exfil_secret.json  risky_delete.json  risky_execshell.json  risky_payment.json  risky_refund.json  subtle_delete.json  subtle_refund.json  subtle_transfer.json  trap_doc_payment.json  trap_faq_refund.json  trap_secret_policy.json
tests/: test_gate.py  test_simulator.py  test_slack_approval.py
